@@ -15,20 +15,20 @@ remove = strict
 remove = Test::More
 
 [Prereqs]
-Acme::Alien::DontPanic                         = 2.1100
-Acme::Alien::DontPanic2                        = 2.1100
-Acme::Ford::Prefect                            = 2.1100
-Acme::Ford::Prefect2                           = 2.1100
-Acme::Ford::Prefect::FFI                       = 2.1100
-Acme::Ford::Prefect2::FFI                      = 2.1100
-Alien                                          = 0.95
+Acme::Alien::DontPanic                         = 2.2900
+Acme::Alien::DontPanic2                        = 2.2901
+Acme::Ford::Prefect                            = 2.2900
+Acme::Ford::Prefect2                           = 2.2900
+Acme::Ford::Prefect::FFI                       = 2.2900
+Acme::Ford::Prefect2::FFI                      = 2.2900
+Alien                                          = 0.96
 Alien::Alien                                   = 0.02
-Alien::autoconf                                = 0.16
+Alien::autoconf                                = 0.17
 Alien::automake                                = 0.15
 Alien::Autotools                               = 1.05
-Alien::Base::ModuleBuild                       = 1.14
+Alien::Base::ModuleBuild                       = 1.15
 Alien::bison                                   = 0.21
-Alien::Build                                   = 2.26
+Alien::Build                                   = 2.38
 Alien::Build::Git                              = 0.08
 Alien::Build::MB                               = 0.07
 Alien::Build::Plugin::Decode::SourceForge      = 0.02
@@ -42,39 +42,40 @@ Alien::castxml                                 = 0.01
 Alien::chromaprint                             = 0.02
 Alien::CMake                                   = 0.11
 Alien::cmake3                                  = 0.05
-Alien::curl                                    = 0.07
+Alien::curl                                    = 0.08
 Alien::Editline                                = 0.10
-Alien::Expat                                   = 0.01
+Alien::Expat                                   = 0.02
 Alien::FFI                                     = 0.25
 Alien::flex                                    = 0.14
 Alien::gmake                                   = 0.21
 Alien::GMP                                     = 1.16
 Alien::gzip                                    = 0.06
 Alien::help2man                                = 0.01
-Alien::Hunspell                                = 0.16
+Alien::Hunspell                                = 0.17
 Alien::Libarchive3                             = 0.29
 Alien::Libbz2                                  = 0.24
-Alien::libnewrelic                             = 0.05
+Alien::libnewrelic                             = 0.06
 Alien::libpcre                                 = 0.01
 Alien::Librdkafka                              = 1.05
 Alien::LibreSSL                                = 0.03
 Alien::libuuid                                 = 0.04
 Alien::libtool                                 = 0.14
 Alien::LibYAML                                 = 2.05
-Alien::Libxml2                                 = 0.16
+Alien::Libxml2                                 = 0.17
 Alien::LZO                                     = 0.02
 Alien::m4                                      = 0.19
 Alien::MSYS                                    = 0.14
 Alien::nasm                                    = 0.22
 Alien::Nettle                                  = 0.04
+Alien::OpenSSL                                 = 0.11
 Alien::patch                                   = 0.15
 Alien::pkgconf                                 = 0.17
 Alien::Role::Alt                               = 0.05
 Alien::Role::Dino                              = 0.06
 Alien::unzip                                   = 0.03
-Alien::wasmtime                                = 0.11
+Alien::wasmtime                                = 0.16
 Alien::xz                                      = 0.06
-;Alt::Alien::cmake::System                     = 0.0402
+;Alt::Alien::cmake::System                     = 0.0502
 ;Alt::Alien::FFI::System                       = 0.21
 ;Alt::ExtUtils::PkgConfig::PLICEASE            = 1.15
 ;Alt::FFI::Raw::FFI                            = 0.02
@@ -100,54 +101,56 @@ Browser::Start                                 = 0.01
 Clang::CastXML                                 = 0.01
 Class::Inspector                               = 1.36
 Const::Introspect::C                           = 0.01
-Devel::ebug                                    = 0.60
+Devel::ebug                                    = 0.63
 Dist::Zilla::App::Command::aliendeps           = 0.03
 Dist::Zilla::Plugin::AlienBuild                = 0.31
 Dist::Zilla::Plugin::Alt                       = 0.07
 Dist::Zilla::Plugin::CommentOut                = 0.01
 Dist::Zilla::Plugin::CSS::Compressor           = 0.02
 Dist::Zilla::Plugin::FFI                       = 1.04
-Dist::Zilla::Plugin::InsertExample             = 0.09
+Dist::Zilla::Plugin::InsertExample             = 0.10
 Dist::Zilla::Plugin::JavaScript::Minifier      = 0.02
 Dist::Zilla::Plugin::MathInt64                 = 0.10
 Dist::Zilla::Plugin::OurPkgVersion             = 0.21
 Dist::Zilla::Plugin::Test::Version             = 1.09
 Dist::Zilla::Plugin::TextTabs                  = 0.04
-Dist::Zilla::PluginBundle::Author::Plicease    = 2.51
+Dist::Zilla::PluginBundle::Author::Plicease    = 2.61
 Env::ShellWords                                = 0.02
 Exception::Class::DBI                          = 1.04
 FFI                                            = 1.15
-FFI::C                                         = 0.08
+FFI::C                                         = 0.10
 FFI::CheckLib                                  = 0.27
 FFI::ExtractSymbols                            = 0.04
-FFI::Platypus                                  = 1.31
+FFI::Platypus                                  = 1.43
+FFI::Platypus::Declare                         = 1.33
 FFI::Platypus::Lang::CPP                       = 0.05
 FFI::Platypus::Lang::CPP::Demangle::XS         = 0.03
 FFI::Platypus::Lang::Fortran                   = 0.12
 FFI::Platypus::Lang::Go                        = 0.01
-FFI::Platypus::Lang::Pascal                    = 0.07
+FFI::Platypus::Lang::Pascal                    = 0.09
 FFI::Platypus::Lang::Rust                      = 0.09
 FFI::Platypus::Legacy::Raw                     = 0.06
 FFI::Platypus::Record::StringArray             = 0.01
-FFI::Platypus::Type::Enum                      = 0.03
+FFI::Platypus::Type::Enum                      = 0.04
 FFI::Platypus::Type::PtrObject                 = 0.02
 FFI::TinyCC                                    = 0.30
 FFI::TinyCC::Inline                            = 0.28
 File::LibMagic::FFI                            = 0.04
+File::Listing                                  = 6.14
 File::Listing::Ftpcopy                         = 0.09
 File::ShareDir::Dist                           = 0.07
 File::Which                                    = 1.23
-Kafka::Librd                                   = 0.15
+Kafka::Librd                                   = 0.19
 Lingua::Alphabet::Phonetic::LAPD               = 0.02
 Log::Log4perl::Appender::TAP                   = 0.04
 Mojolicious::Plugin::Ident                     = 0.31
-Mojolicious::Plugin::TtRenderer                = 1.60
-NewFangle                                      = 0.03
+Mojolicious::Plugin::TtRenderer                = 1.62
+NewFangle                                      = 0.04
 PeekPoke::FFI                                  = 0.02
 Perl::Critic::Plicease                         = 0.03
 Photography::DX                                = 0.02
 Photography::EV                                = 0.07
-PkgConfig                                      = 0.23026
+PkgConfig                                      = 0.25026
 PkgConfig::LibPkgConf                          = 0.11
 Shell::Config::Generate                        = 0.34
 Shell::Guess                                   = 0.09
@@ -158,7 +161,7 @@ Test::Alien::CPP                               = 1.02
 Test::CChecker                                 = 0.10
 Test::Exec                                     = 0.04
 Test::Fixme                                    = 0.16
-Test::Script                                   = 1.25
+Test::Script                                   = 1.27
 Test::Version                                  = 2.09
 Test2::Plugin::FauxHomeDir                     = 0.06
 Test2::Tools::FFI                              = 0.05
@@ -170,7 +173,7 @@ Test2::Tools::URL                              = 0.05
 Text::Hunspell::FFI                            = 0.02
 URI::ws                                        = 0.03
 UUID::FFI                                      = 0.07
-Wasm                                           = 0.14
+Wasm                                           = 0.21
 WebService::DailyConnect                       = 0.02
 Win32::ErrorMode                               = 0.06
 Win32::Getppid                                 = 0.05
@@ -194,7 +197,6 @@ Dist::Zilla::Plugin::Bootstrap::lib            = 0
 Dist::Zilla::Plugin::DynamicPrereqs            = 0
 Dist::Zilla::Plugin::Meta::Dynamic::Config     = 0
 Dist::Zilla::Plugin::PPPort                    = 0
-File::Listing                                  = 0
 JSON                                           = 0
 JSON::MaybeXS                                  = 0
 local::lib                                     = 0
